Add notes and add homepage for build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "werwolf",
   "version": "0.1.0",
+  "homepage": "https://userpages.uni-koblenz.de/~tigill/build/",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.23",
